--- a/BIOLOGICAL_CONSECUTIVE_MONTHS.ipynb
+++ b/BIOLOGICAL_CONSECUTIVE_MONTHS.ipynb
@@ -406,7 +406,7 @@
     "    import os\n",
     "\n",
     "    # Define the file name for the CSV\n",
-    "    csv_filename = \"results.csv\"\n",
+    "    csv_filename = f'results_{combined_cat_values}.csv'\n",
     "\n",
     "    # Check if the file exists, if not, create it and write the header\n",
     "    if not os.path.exists(csv_filename):\n",
