--- a/BIOLOGICAL_MONTHSAFTER.ipynb
+++ b/BIOLOGICAL_MONTHSAFTER.ipynb
@@ -610,7 +610,7 @@
     "    import os\n",
     "\n",
     "    # Define the file name for the CSV\n",
-    "    csv_filename = \"results_biology.csv\"\n",
+    "    csv_filename = f'results_{combined_cat_values}.csv'\n",
     "\n",
     "    # Check if the file exists, if not, create it and write the header\n",
     "    if not os.path.exists(csv_filename):\n",
@@ -653,7 +653,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read data from CSV file\n",
-    "data = pd.read_csv('results.csv')\n",
+    "data = pd.read_csv(f'results_{combined_cat_values}.csv')\n",
     "\n",
     "# Separate data by variable\n",
     "variables = data['Parameter'].unique()\n",
@@ -663,6 +663,7 @@
     "    region_data = data[data['Region Name'] == region]\n",
     "    start_year = region_data['Start Year'].min()\n",
     "    end_year = region_data['End Year'].max()\n",
+    "    combined_cat_values = region_data['combined_cat_values']\n",
     "\n",
     "    fig, axs = plt.subplots(len(variables), 1, figsize=(8, 2 * len(variables)), sharex=False)\n",
     "    fig.suptitle(f'Region: {region} ({start_year}-{end_year})', y=1.02, fontsize=16, ha='center')  # Place region name and year on top of the plots with increased font size\n",
@@ -704,9 +705,10 @@
     "    plt.tight_layout()\n",
     "    \n",
     "    # Save the plot as an image file with region name and year\n",
-    "    filename = f'{region}_{start_year}-{end_year}_plots.png'\n",
+    "    combined_values_str = str(region_data['combined_cat_values'].iloc[0])[1:-1]  # Get the value inside the list and remove the brackets\n",
+    "    filename = f'{region}_{start_year}-{end_year}_cat{combined_values_str}_plots.png'\n",
     "    fig.savefig(filename)\n",
-    "\n",
+    "    \n",
     "    # Close the figure to release memory\n",
     "    plt.close(fig)"
    ]
