--- a/BIOLOGICAL_CONSECUTIVE_MONTHS.ipynb
+++ b/BIOLOGICAL_CONSECUTIVE_MONTHS.ipynb
@@ -3,6 +3,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bb796d2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray as xr\n",
+    "\n",
+    "# Open the chlorophyll NetCDF file\n",
+    "chlorophyll_file = xr.open_dataset('/Users/Sayooj/Downloads/Sayooj_OC-CCI_chl-a_CCMP_wind/OC-CCI_chlor_a_1997_2022.nc')\n",
+    "\n",
+    "# Open the wind speed and direction NetCDF file\n",
+    "wind_file = xr.open_dataset('/Users/Sayooj/Downloads/Sayooj_OC-CCI_chl-a_CCMP_wind/CCMP_v3.0_wind_1993_2019.nc')\n",
+    "\n",
+    "# List of variables\n",
+    "variables = ['OC-CCI_chlor_a', 'CCMP_w', 'CCMP_wind_dir']\n",
+    "\n",
+    "# Create an empty dataset to store the monthly averages for all variables\n",
+    "monthly_avg_dataset = xr.Dataset()\n",
+    "\n",
+    "# Loop over each variable\n",
+    "for variable in variables:\n",
+    "    # Extract the variable data\n",
+    "    if variable == 'OC-CCI_chlor_a':\n",
+    "        var_data = chlorophyll_file[variable]\n",
+    "    else:\n",
+    "        var_data = wind_file[variable]\n",
+    "\n",
+    "    # Resample to monthly frequency and calculate the mean for each month\n",
+    "    monthly_avg = var_data.resample(time='M').mean(dim='time')\n",
+    "\n",
+    "    # Calculate the overall average for each month across all years\n",
+    "    monthly_avg_overall = monthly_avg.groupby('time.month').mean(dim='time')\n",
+    "\n",
+    "    # Add the variable to the combined dataset\n",
+    "    monthly_avg_dataset[variable] = monthly_avg_overall\n",
+    "\n",
+    "# Save the combined dataset to a new NetCDF file\n",
+    "output_path = '/Users/Sayooj/Downloads/all_biologicalvariables_monthly_avg_overall.nc'\n",
+    "monthly_avg_dataset.to_netcdf(output_path)\n",
+    "print(f'Saved all variables monthly averages to {output_path}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38a0963e",
    "metadata": {},
    "outputs": [],
@@ -220,7 +264,8 @@
     "\n",
     "\n",
     "    # Open the existing NetCDF file for chlorophyll data\n",
-    "    file_path_chlorophyll = '/Users/Sayooj/Downloads/chlorophyll_anomaly_dataset.nc'\n",
+    "    file_path_chlorophyll = ('/Users/Sayooj/Downloads/Sayooj_OC-CCI_chl-a_CCMP_wind/OC-CCI_chlor_a_1997_2022.nc')\n",
+    "\n",
     "    ds_chlorophyll = xr.open_dataset(file_path_chlorophyll)\n",
     "\n",
     "    # Define the time range you want to slice for chlorophyll data\n",
@@ -241,7 +286,7 @@
     "    print(f'Sliced chlorophyll dataset saved to {output_file_path_chlorophyll}')\n",
     "\n",
     "    # Open the existing NetCDF file for wind speed and direction data\n",
-    "    file_path_wind = '/Users/Sayooj/Downloads/wind_anomaly_dataset.nc'\n",
+    "    file_path_wind = '/Users/Sayooj/Downloads/Sayooj_OC-CCI_chl-a_CCMP_wind/CCMP_v3.0_wind_1993_2019.nc'\n",
     "    ds_wind = xr.open_dataset(file_path_wind)\n",
     "\n",
     "    # Calculate the start and end dates based on start_year and end_year\n",
@@ -275,7 +320,7 @@
     "    wind_direction = wind_file.variables['CCMP_wind_dir'][:]\n",
     "    \n",
     "    # Open the non-heatwave dataset file\n",
-    "    non_heatwave_dataset_file = nc.Dataset('/Users/sayooj/Downloads/all_variables_monthly_avg_overall.nc')\n",
+    "    non_heatwave_dataset_file = nc.Dataset('/Users/sayooj/Downloads/all_biologicalvariables_monthly_avg_overall.nc')\n",
     "\n",
     "    # Open the mask file for the specified region\n",
     "    mask_file = nc.Dataset(f'/Users/sayooj/Downloads/consecutive_monthly_mask_{region_name}_{start_year}_{end_year}.nc')\n",
@@ -413,7 +458,7 @@
     "        with open(csv_filename, 'w', newline='') as csvfile:\n",
     "            csv_writer = csv.writer(csvfile)\n",
     "            # Write header\n",
-    "            csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"Months After\", \"Consecutive Months Threshold\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\"])\n",
+    "            csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"Months After\", \"Consecutive Months Threshold\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
     "    \n",
     "    # Define significance level\n",
     "    significance_level = 0.01\n",
@@ -424,9 +469,9 @@
     "\n",
     "    # Define the data to be written to the CSV\n",
     "    data = [\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, \"Chlorophyll\", median_p_value_chlorophyll_region_year, median_median_diff_chlorophyll_region_year, median_std_dev_chlorophyll_region_year],\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, \"Wind Speed\", median_p_value_wind_speed_region_year, median_median_diff_wind_speed_region_year, median_std_dev_wind_speed_region_year],\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, \"Wind Direction\", median_p_value_wind_direction_region_year, median_median_diff_wind_direction_region_year, median_std_dev_wind_direction_region_year]\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Chlorophyll\", median_p_value_chlorophyll_region_year, median_median_diff_chlorophyll_region_year, median_std_dev_chlorophyll_region_year, Significance],\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Speed\", median_p_value_wind_speed_region_year, median_median_diff_wind_speed_region_year, median_std_dev_wind_speed_region_year, Significance],\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Direction\", median_p_value_wind_direction_region_year, median_median_diff_wind_direction_region_year, median_std_dev_wind_direction_region_year, Significance]\n",
     "    ]\n",
     "\n",
     "    # Append data to CSV\n",
@@ -437,6 +482,14 @@
     "\n",
     "    print(\"Results appended to\", csv_filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f730aa8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
