--- a/BIOLOGICAL_MONTHSAFTER.ipynb
+++ b/BIOLOGICAL_MONTHSAFTER.ipynb
@@ -427,7 +427,8 @@
     "\n",
     "\n",
     "    # Open the existing NetCDF file for chlorophyll data\n",
-    "    file_path_chlorophyll = '/Users/Sayooj/Downloads/chlorophyll_anomaly_dataset.nc'\n",
+    "    file_path_chlorophyll = ('/Users/Sayooj/Downloads/Sayooj_OC-CCI_chl-a_CCMP_wind/OC-CCI_chlor_a_1997_2022.nc')\n",
+    "\n",
     "    ds_chlorophyll = xr.open_dataset(file_path_chlorophyll)\n",
     "\n",
     "    # Define the time range you want to slice for chlorophyll data\n",
@@ -438,7 +439,7 @@
     "    ds_chlorophyll_sliced = ds_chlorophyll.sel(time=slice(start_date_chlorophyll, end_date_chlorophyll))\n",
     "\n",
     "    # Create a new NetCDF file for sliced chlorophyll data\n",
-    "    output_file_path_chlorophyll = f'sliced_OC-CCI_chlor_a_{region_name}_{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc'\n",
+    "    output_file_path_chlorophyll = f'sliced_OC-CCI_chlor_a_{region_name}{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc'\n",
     "    ds_chlorophyll_sliced.to_netcdf(output_file_path_chlorophyll)\n",
     "\n",
     "    # Close the original and sliced chlorophyll datasets\n",
@@ -448,7 +449,7 @@
     "    print(f'Sliced chlorophyll dataset saved to {output_file_path_chlorophyll}')\n",
     "\n",
     "    # Open the existing NetCDF file for wind speed and direction data\n",
-    "    file_path_wind = '/Users/Sayooj/Downloads/wind_anomaly_dataset.nc'\n",
+    "    file_path_wind = '/Users/Sayooj/Downloads/Sayooj_OC-CCI_chl-a_CCMP_wind/CCMP_v3.0_wind_1993_2019.nc'\n",
     "    ds_wind = xr.open_dataset(file_path_wind)\n",
     "\n",
     "    # Calculate the start and end dates based on start_year and end_year\n",
@@ -459,7 +460,7 @@
     "    ds_wind_sliced = ds_wind.sel(time=slice(start_date_wind, end_date_wind))\n",
     "\n",
     "    # Create a new NetCDF file with a formatted filename for wind data\n",
-    "    output_file_path_wind = f'sliced_OC-CCI_CCMP_v3.0_wind_{region_name}_{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc'\n",
+    "    output_file_path_wind = f'sliced_OC-CCI_CCMP_v3.0_wind_{region_name}{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc'\n",
     "    ds_wind_sliced.to_netcdf(output_file_path_wind)\n",
     "\n",
     "    # Close the original and sliced wind datasets\n",
@@ -469,17 +470,20 @@
     "    print(f'Sliced wind dataset saved to {output_file_path_wind}')\n",
     "\n",
     "    # Define the path to the sliced chlorophyll dataset file\n",
-    "    chlorophyll_file = nc.Dataset(f'sliced_OC-CCI_chlor_a_{region_name}_{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc')\n",
+    "    chlorophyll_file = nc.Dataset(f'sliced_OC-CCI_chlor_a_{region_name}{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc')\n",
     "\n",
     "    # Get the chlorophyll variable data\n",
     "    chlorophyll = chlorophyll_file.variables['OC-CCI_chlor_a'][:]\n",
     "\n",
     "    # Define the path to the wind speed and direction dataset file\n",
-    "    wind_file = nc.Dataset(f'sliced_OC-CCI_CCMP_v3.0_wind_{region_name}_{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc')\n",
+    "    wind_file = nc.Dataset(f'sliced_OC-CCI_CCMP_v3.0_wind_{region_name}{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc')\n",
     "\n",
     "    # Get the wind speed and wind direction variable data\n",
     "    wind_speed = wind_file.variables['CCMP_w'][:]\n",
     "    wind_direction = wind_file.variables['CCMP_wind_dir'][:]\n",
+    "    \n",
+    "    # Open the non-heatwave dataset file\n",
+    "    non_heatwave_dataset_file = nc.Dataset('/Users/sayooj/Downloads/all_biologicalvariables_monthly_avg_overall.nc')\n",
     "\n",
     "    # Open the mask file for the specified region\n",
     "    mask_file = nc.Dataset(f'/Users/sayooj/Downloads/masked_values_consecutive_heatwave_info_{region_name}{consecutive_months_threshold}_{months_after}_{start_year}_{end_year}.nc')\n",
@@ -617,7 +621,7 @@
     "        with open(csv_filename, 'w', newline='') as csvfile:\n",
     "            csv_writer = csv.writer(csvfile)\n",
     "            # Write header\n",
-    "            csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"Months After\", \"Consecutive Months Threshold\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\"])\n",
+    "            csv_writer.writerow([\"Region Name\", \"Start Year\", \"End Year\", \"Months After\", \"Consecutive Months Threshold\", \"combined_cat_values\", \"Parameter\", \"Median p-value\", \"Median median difference\", \"Median standard deviation\", \"Significance\"])\n",
     "    \n",
     "    # Define significance level\n",
     "    significance_level = 0.01\n",
@@ -628,9 +632,9 @@
     "        \n",
     "    # Define the data to be written to the CSV\n",
     "    data = [\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, \"Chlorophyll\", median_p_value_chlorophyll_region_year, median_median_diff_chlorophyll_region_year, median_std_dev_chlorophyll_region_year],\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, \"Wind Speed\", median_p_value_wind_speed_region_year, median_median_diff_wind_speed_region_year, median_std_dev_wind_speed_region_year],\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, \"Wind Direction\", median_p_value_wind_direction_region_year, median_median_diff_wind_direction_region_year, median_std_dev_wind_direction_region_year]\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Chlorophyll\", median_p_value_chlorophyll_region_year, median_median_diff_chlorophyll_region_year, median_std_dev_chlorophyll_region_year, Significance],\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Speed\", median_p_value_wind_speed_region_year, median_median_diff_wind_speed_region_year, median_std_dev_wind_speed_region_year, Significance],\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Direction\", median_p_value_wind_direction_region_year, median_median_diff_wind_direction_region_year, median_std_dev_wind_direction_region_year, Significance]\n",
     "    ]\n",
     "\n",
     "    # Append data to CSV\n",
@@ -652,8 +656,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "# Read data from CSV file\n",
-    "data = pd.read_csv(f'results_{combined_cat_values}.csv')\n",
+    "data = pd.read_csv('results_cat{}.csv'.format(combined_cat_values[0], combined_cat_values[1]))\n",
     "\n",
     "# Separate data by variable\n",
     "variables = data['Parameter'].unique()\n",
@@ -673,10 +676,10 @@
     "        variable_data = region_data[region_data['Parameter'] == variable]\n",
     "\n",
     "        # Sort the data by Months After for a better visualization\n",
-    "        variable_data.sort_values(by='Months After', inplace=True)\n",
+    "        variable_data.sort_values(by='months_after', inplace=True)\n",
     "\n",
     "        # Create a step digital signal plot with bolder lines\n",
-    "        x_values = variable_data['Months After']\n",
+    "        x_values = variable_data['months_after']\n",
     "        y_values = (variable_data['Significance'] == \"Significant\").astype(int)\n",
     "\n",
     "        axs[i].step(x_values, y_values, where='post', color='darkblue', linewidth=2.5)  # Make the lines bolder\n",
@@ -696,8 +699,8 @@
     "\n",
     "    # Set custom x labels for all subplots\n",
     "    for ax in axs:\n",
-    "        ax.set_xticks(data['Months After'].unique())\n",
-    "        ax.set_xticklabels(data['Months After'].unique().astype(str))\n",
+    "        ax.set_xticks(data['months_after'].unique())\n",
+    "        ax.set_xticklabels(data['months_after'].unique().astype(str))\n",
     "\n",
     "    # Place the plots for \"spco2\" and \"alkalinity\" at the bottom\n",
     "    axs[-1].set_xlabel('Months', fontsize=12)  # Adjust xlabel fontsize\n",
