--- a/BIOLOGICAL_MONTHSAFTER.ipynb
+++ b/BIOLOGICAL_MONTHSAFTER.ipynb
@@ -16,6 +16,9 @@
     "import pandas as pd\n",
     "import pandas as pd\n",
     "from docx import Document\n",
+    "import csv\n",
+    "import os\n",
+    "\n",
     "\n",
     "# Read parameter combinations from CSV file\n",
     "csv_file_path = \"/Users/sayooj/Downloads/PARAMETERS.csv\"  # Replace with the actual path\n",
@@ -521,6 +524,8 @@
     "    std_dev_chlorophyll_region_year = []\n",
     "    std_dev_wind_speed_region_year = []\n",
     "    std_dev_wind_direction_region_year = []\n",
+    "    \n",
+    "    results = []\n",
     "\n",
     "    for _ in range(num_samples):\n",
     "        # Randomly select indices for heatwave and non-heatwave periods\n",
@@ -610,11 +615,17 @@
     "    print(\"Median median difference:\", median_median_diff_wind_direction_region_year)\n",
     "    print(\"Median standard deviation:\", median_std_dev_wind_direction_region_year)\n",
     "\n",
-    "    import csv\n",
-    "    import os\n",
+    "    # Extract combined category values from the first row of the 'combined_cat_values' column\n",
+    "    combined_cat_values = parameters_df['combined_cat_values'].iloc[0]\n",
     "\n",
-    "    # Define the file name for the CSV\n",
-    "    csv_filename = f'results_{combined_cat_values}.csv'\n",
+    "    # Extract the numbers from the combined_cat_values string\n",
+    "    numbers = ''.join(filter(str.isdigit, combined_cat_values))\n",
+    "\n",
+    "    # Insert an underscore between the numbers\n",
+    "    formatted_numbers = '_'.join(numbers)\n",
+    "\n",
+    "    # Construct the filename\n",
+    "    csv_filename = f\"results_cat_{formatted_numbers}.csv\"\n",
     "\n",
     "    # Check if the file exists, if not, create it and write the header\n",
     "    if not os.path.exists(csv_filename):\n",
@@ -629,12 +640,17 @@
     "    # Define a function to determine significance\n",
     "    def determine_significance(p_value):\n",
     "        return \"Significant\" if p_value <= significance_level else \"Non-Significant\"\n",
-    "        \n",
+    "\n",
+    "    # Determine significance for each parameter\n",
+    "    significance_chlorophyll = determine_significance(median_p_value_chlorophyll_region_year)\n",
+    "    significance_wind_speed = determine_significance(median_p_value_wind_speed_region_year)\n",
+    "    significance_wind_direction = determine_significance(median_p_value_wind_direction_region_year)\n",
+    "\n",
     "    # Define the data to be written to the CSV\n",
     "    data = [\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Chlorophyll\", median_p_value_chlorophyll_region_year, median_median_diff_chlorophyll_region_year, median_std_dev_chlorophyll_region_year, Significance],\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Speed\", median_p_value_wind_speed_region_year, median_median_diff_wind_speed_region_year, median_std_dev_wind_speed_region_year, Significance],\n",
-    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Direction\", median_p_value_wind_direction_region_year, median_median_diff_wind_direction_region_year, median_std_dev_wind_direction_region_year, Significance]\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Chlorophyll\", median_p_value_chlorophyll_region_year, median_median_diff_chlorophyll_region_year, median_std_dev_chlorophyll_region_year, significance_chlorophyll],\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Speed\", median_p_value_wind_speed_region_year, median_median_diff_wind_speed_region_year, median_std_dev_wind_speed_region_year, significance_wind_speed],\n",
+    "        [region_name, start_year, end_year, months_after, consecutive_months_threshold, combined_cat_values, \"Wind Direction\", median_p_value_wind_direction_region_year, median_median_diff_wind_direction_region_year, median_std_dev_wind_direction_region_year]\n",
     "    ]\n",
     "\n",
     "    # Append data to CSV\n",
@@ -643,7 +659,7 @@
     "        # Write data rows\n",
     "        csv_writer.writerows(data)\n",
     "\n",
-    "    print(\"Results appended to\", csv_filename)"
+    "    print(\"Results appended to\", csv_filename)\n"
    ]
   },
   {
@@ -656,7 +672,18 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('results_cat{}.csv'.format(combined_cat_values[0], combined_cat_values[1]))\n",
+    "# Extract combined category values from the first row of the 'combined_cat_values' column\n",
+    "csv_file_path = \"/Users/sayooj/Downloads/PARAMETERS.csv\"\n",
+    "parameters_df = pd.read_csv(csv_file_path)\n",
+    "combined_cat_values = parameters_df['combined_cat_values'].iloc[0]\n",
+    "\n",
+    "# Extract the numbers from the combined_cat_values string\n",
+    "numbers = ''.join(filter(str.isdigit, combined_cat_values))\n",
+    "\n",
+    "# Insert an underscore between the numbers\n",
+    "formatted_numbers = '_'.join(numbers)\n",
+    "\n",
+    "data = pd.read_csv(f\"results_cat_{formatted_numbers}.csv\")\n",
     "\n",
     "# Separate data by variable\n",
     "variables = data['Parameter'].unique()\n",
@@ -708,8 +735,7 @@
     "    plt.tight_layout()\n",
     "    \n",
     "    # Save the plot as an image file with region name and year\n",
-    "    combined_values_str = str(region_data['combined_cat_values'].iloc[0])[1:-1]  # Get the value inside the list and remove the brackets\n",
-    "    filename = f'{region}_{start_year}-{end_year}_cat{combined_values_str}_plots.png'\n",
+    "    filename = f'{region}_{start_year}-{end_year}_cat_{formatted_numbers}_plots.png'\n",
     "    fig.savefig(filename)\n",
     "    \n",
     "    # Close the figure to release memory\n",
